examples/test/testpolicy6993.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6993
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key1: value43
      key43: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value28
          key48: value22
          key10: value33
      podSelector:
        matchLabels:
          key17: value5
